--- a/application/views/scripts/archive/index.phtml
+++ b/application/views/scripts/archive/index.phtml
@@ -7,17 +7,17 @@
     	<td>
 		    <div id="main_content_archive_picture">
 				<img  class="archive" src="<?php echo $entry->getPictureName() ? 
-			     	$this->escape($entry->getPictureName()) :
+			     	$entry->getPictureName() :
 			     	'/images/www_leyout_buffet_buffet_text.gif' ?>">
 		    </div>
 			
 		    <div id="main_content_archive_cont">
 			    <p class="archive_title">
-			    	<?php echo $this->escape($entry->getDate()) ?>
-			    	<?php echo $this->escape($entry->getTitleLng()) ?>	
+			    	<?php echo $entry->getDate() ?>
+			    	<?php echo $entry->getTitleLng() ?>	
 			    </p>
 			    
-			    <p class="archive_pre_content"><?php echo nl2br($this->escape($entry->getPreContent())) ?></p>
+			    <p class="archive_pre_content"><?php echo nl2br($entry->getPreContent()) ?></p>
 		    </div>
 		    
 		    <div id="main_content_news_go">
