usuniecie nl2br

--- a/application/modules/admin/views/scripts/event/_event-info.phtml
+++ b/application/modules/admin/views/scripts/event/_event-info.phtml
@@ -13,29 +13,29 @@
 		<tr><td></td></tr>
 		<tr>
 			<td>Tytuł [pl]</td>
-			<td><?php echo nl2br($this->event->getTitle()) ?></td>
+			<td><?php echo $this->event->getTitle() ?></td>
 		</tr>
 		<tr>
 			<td>Zajawka [pl]</td>
-			<td><?php echo nl2br($this->event->getPreContentPl()) ?></td>
+			<td><?php echo $this->event->getPreContentPl() ?></td>
 		</tr>
 		<tr>
 			<td>Treść [pl]</td>
-			<td><?php echo nl2br($this->event->getContentPl()) ?></td>
+			<td><?php echo $this->event->getContentPl() ?></td>
 		</tr>
 		<tr><td></td></tr>
 		<tr><td></td></tr>
 		<tr>
 			<td>Tutuł [en]</td>
-			<td><?php echo nl2br($this->event->getTitleEn()) ?></td>
+			<td><?php echo $this->event->getTitleEn() ?></td>
 		</tr>
 		<tr>
 			<td>Zajawka [en]</td>
-			<td><?php echo nl2br($this->event->getPreContentEn()) ?></td>
+			<td><?php echo $this->event->getPreContentEn() ?></td>
 		</tr>
 		<tr>
 			<td>Treść [en]</td>
-			<td><?php echo nl2br($this->event->getContentEn()) ?></td>
+			<td><?php echo $this->event->getContentEn() ?></td>
 		</tr>
 		
 	</table>
