--- a/application/views/scripts/announcement/index.phtml
+++ b/application/views/scripts/announcement/index.phtml
@@ -24,7 +24,7 @@
     	<?php echo $entry->getTitleLng() ?>
     </p>
     
-    <p class="announcement_pre_content"><?php echo nl2br($entry->getPreContent()) ?></p>
+    <p class="announcement_pre_content"><?php echo $entry->getPreContent() ?></p>
     </div>
     
     <div id="main_content_announcement_go">
