--- a/application/views/scripts/archive/index.phtml
+++ b/application/views/scripts/archive/index.phtml
@@ -17,7 +17,7 @@
 			    	<?php echo $entry->getTitleLng() ?>	
 			    </p>
 			    
-			    <p class="archive_pre_content"><?php echo nl2br($entry->getPreContent()) ?></p>
+			    <p class="archive_pre_content"><?php echo $entry->getPreContent() ?></p>
 		    </div>
 		    
 		    <div id="main_content_news_go">
