--- a/application/views/scripts/card/index.phtml
+++ b/application/views/scripts/card/index.phtml
@@ -7,7 +7,7 @@
 
 <p class="main_text">
     <?php foreach ($this->entries as $entry): ?>    
-    <?php echo nl2br($entry->getContentLng())	 ?>
+    <?php echo $entry->getContentLng()	 ?>
     <?php endforeach ?>
 </p>
 
