--- a/application/views/scripts/contact/index.phtml
+++ b/application/views/scripts/contact/index.phtml
@@ -4,7 +4,7 @@
 
 <p class="main_text">
     <?php foreach ($this->entries as $entry): ?>
-    <?php echo nl2br($entry->getContentLng())	 ?>
+    <?php echo $entry->getContentLng()	 ?>
     <?php endforeach ?>
 </p>
 </div>
