--- a/application/layouts/scripts/layout_en.phtml
+++ b/application/layouts/scripts/layout_en.phtml
@@ -93,10 +93,10 @@
 						<div id="menu_top_lng">
 							<ul class="menu_poziome2">
 								<li>
-									<a href="<?php echo $this->url(array('controller'=>'index', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">PL</a>
+									<a href="<?php echo $this->url(array('lang'=>'pl')); ?>">PL</a>
 								</li>
 								<li class="menu_poziome2">
-									<a href="<?php echo $this->url(array('controller'=>'index', 'action'=>'index', 'lang'=>'en'), null, true); ?>">EN</a>
+									<a href="<?php echo $this->url(array('lang'=>'en')); ?>">EN</a>
 								</li>
 							</ul>	
 						</div>
