Poprawka linku do edycji galeri - resetuje zmienne requestu

--- a/application/modules/admin/layouts/scripts/layout_admin.phtml
+++ b/application/modules/admin/layouts/scripts/layout_admin.phtml
@@ -5,11 +5,13 @@
 	<title>Buffet</title>
 	<?php echo $this->headLink()
 		->appendStylesheet('/css/theme/jquery-ui-1.8.19.custom.css')
+		->appendStylesheet('/css/jquery.Jcrop.css')
 		->appendStylesheet('/cleditor/jquery.cleditor.css')
 		->appendStylesheet('/css/global.css') ?>
 	<?php echo $this->headScript()
 		->prependFile('/js/admin.js')
 		->prependFile('/cleditor/jquery.cleditor.js')
+		->prependFile('/js/jquery.Jcrop.min.js')
 		->prependFile('/js/jquery-ui-1.8.18.min.js')
 		->prependFile('/js/jquery-1.7.2.min.js') ?>
 	
@@ -65,7 +67,7 @@
 						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'event', 'action'=>'index', 'lang'=>'pl', 'where'=>'archive'), null, true); ?>">Strona ARCHIWUM</a>
 					</li>
                     <li>
-						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'gallery', 'action'=>'index', 'lang'=>'pl')); ?>">Strona FOTO</a>
+						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'gallery', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Strona FOTO</a>
 					</li>
 					<li>
 						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'partner', 'action'=>'index', 'lang'=>'pl'), null, true); ?>">Strona PARTNERZY</a>
