Usunięcie escapowania zajawki galerii w adminie

--- a/application/modules/admin/views/scripts/gallery/index.phtml
+++ b/application/modules/admin/views/scripts/gallery/index.phtml
@@ -22,7 +22,7 @@
 					</a>
 				</td>
 				<td><?php echo date('d.m.Y', strtotime($this->escape($entry->getFolderDate()))) ?></td>
-				<td id="pre_content"><?php echo substr($this->escape($entry->getFolderContent()), 0, 80) ?></td>
+				<td id="pre_content"><?php echo substr($entry->getFolderContent(), 0, 80) ?></td>
 				<td>
 					<a href="<?php echo $this->url(array('action' => 'edit', 'id' => $entry->getId())); ?>">
 						<img src="/images/edit.jpg" />
