Dodawanie dwoch zdjec

--- a/application/modules/admin/views/scripts/gallery/show.phtml
+++ b/application/modules/admin/views/scripts/gallery/show.phtml
@@ -1,7 +1,7 @@
 <?php echo $this->partial('gallery/_gallery-info.phtml', array('gallery' => $this->gallery)); ?>
 
 <div id="admin_event">
-	<p class="admin_tytul">Zdjęcia w galerii (wyszażone zdjęcia są nieaktywne)</p>
+	<p class="admin_tytul">Zdjęcia w galerii (wyszarzone zdjęcia są nieaktywne)</p>
 	
 	<?php echo $this->form ?>
 	
