--- a/application/views/scripts/archive/index.phtml
+++ b/application/views/scripts/archive/index.phtml
@@ -6,8 +6,8 @@
     	<?php foreach ($entries as $entry) : ?>
     	<td>
 		    <div id="main_content_archive_picture">
-				<img  class="archive" src="<?php echo $entry->getPictureName() ? 
-			     	$entry->getPictureName() :
+				<img  class="archive" src="<?php echo $entry->getPictureNameSmall() ? 
+			     	$entry->getPictureNameSmall() :
 			     	'/images/www_leyout_buffet_buffet_text.gif' ?>">
 		    </div>
 			
