--- a/public/css/global.css
+++ b/public/css/global.css
@@ -340,7 +340,6 @@ font-size	: 8pt;
 font-family	: Arial;
 text-align	: justify;
 padding-left: 25px;
-margin_top: 0px;
 padding-top: 0px;
 }
 
@@ -794,4 +793,34 @@ padding: 5px;
 
 .gallery-photo.invisible > img {
 	opacity: 0.2;
+}
+
+.gallery-photo .ui-button-text {
+	padding: 3px;
+	line-height: 0.7;
+}
+
+#photo-edit h4 {
+	margin-bottom: 5px;
+}
+
+#photo-edit td {
+	padding: 10px;
+	vertical-align: top;
+}
+
+#photo-edit #source {
+	width: 500;
+}
+
+#photo-edit #scaled {
+	width: 200px;
+	height: 200px;
+	overflow: hidden;
+}
+
+#photo-edit #thumb {
+	width: 200px;
+	height: 200px;
+	overflow: hidden;
 }
