--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -36,22 +36,22 @@
 			<div id="menu_left">
 				<ul>
 					<li>
-						<a href="<?php echo $this->url(array('controller'=>'offer', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>">OFERTA</a>
+						<!--<a href="<?php echo $this->url(array('controller'=>'offer', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>">-->OFERTA<!--</a>-->
 					</li>
 					<li>
-						<a href="<?php echo $this->url(array('controller'=>'partners', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>">PARTNERZY</a>
+						<!-- <a href="<?php echo $this->url(array('controller'=>'partners', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>">-->PARTNERZY<!--</a>-->
 					</li>
 					<li>
-						<a href="<?php echo $this->url(array('controller'=>'newsletter', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>">NEWSLETTER</a>
+						<!--a href="<?php echo $this->url(array('controller'=>'newsletter', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>">-->NEWSLETTER<!--</a>-->
 					</li>
 					<li>
 						<a href="http://www.facebook.com/BUFFETklub" target="_blank">FACEBOOK</a>
 					</li>
 					<li>
-						<a href="http://vimeo.com/" target="_blank">VIMEO</a>
+						<a href="http://vimeo.com/user10915565" target="_blank">VIMEO</a>
 					</li>
 					<li>
-						<a href="<?php echo $this->url(array('controller'=>'podcast', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>">PODCAST</a>
+						<!--<a href="<?php echo $this->url(array('controller'=>'podcast', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>">-->PODCAST<!--</a>-->
 					</li>
 				</ul>
 			</div>
@@ -77,10 +77,10 @@
 									<a href="<?php echo $this->url(array('controller'=>'gallery', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>">FOTO</a>
 								</li>
 								<li class="menu_poziome">
-									<a href="<?php echo $this->url(array('controller'=>'video', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>">VIDEO</a>
+									<!--<a href="<?php echo $this->url(array('controller'=>'video', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>">-->VIDEO<!--</a>-->
 								</li>
 								<li class="menu_poziome">
-									<a href="<?php echo $this->url(array('controller'=>'card', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>">KARTA</a>
+									<!--<a href="<?php echo $this->url(array('controller'=>'card', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>">-->KARTA<!--</a>-->
 								</li>
 								<li class="menu_poziome">
 									<a href="<?php echo $this->url(array('controller'=>'archive', 'action'=>'index', 'lang'=>$_SESSION['lang']), null, true); ?>">ARCHIWUM</a>
