--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -30,6 +30,7 @@
 </head>
 
 <body onload=chImg();>
+<!-- <img id="constant" src="/images/elementy_stale.png"> -->
 	<div id="container">
 		<div id="left">
 			<div id="image8"></div>
