Przenikanie się obrazków z banera

--- a/application/modules/admin/layouts/scripts/layout-login.phtml
+++ b/application/modules/admin/layouts/scripts/layout-login.phtml
@@ -10,11 +10,9 @@
 		->prependFile('/js/admin.js')
 		->prependFile('/js/jquery-ui-1.8.18.min.js')
 		->prependFile('/js/jquery-1.7.2.min.js') ?>
-	
-	</script>
 </head>
 
-<body onload=chImg();>
+<body>
 	<?php echo $this->partial('_messages.phtml'); ?>
         
 	<div id="container">
