--- a/application/views/scripts/gallery/index.phtml
+++ b/application/views/scripts/gallery/index.phtml
@@ -3,7 +3,7 @@
 		<?php foreach ($this->galleries as $gallery) : ?>
 		<td>
 			<div class="gallery">
-				<div class="clearfix">
+				<div class="photos clearfix">
 					<div class="preview">
 						<img src="<?php echo $gallery->getMainPhoto()->getName() ?>" />
 					</div>
