Dodanie opisu pod galeriami

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -699,6 +699,10 @@ width: 257px;
 	margin: auto;
 }
 
+#galleries .gallery .description {
+	margin: 20px;
+}
+
 #admin_event{
 padding-left: 20px;
 padding-right: 20px;
