--- a/application/views/scripts/gallery/index.phtml
+++ b/application/views/scripts/gallery/index.phtml
@@ -13,6 +13,10 @@
 						<?php endforeach ?>
 					</div>
 				</div>
+				<div class="description">
+					<h4><?php echo $gallery->getFolderDate() ?></h4>
+					<p><?php echo $this->escape($gallery->getFolderName()) ?></p>
+				</div>
 			</div>
 		</td>
 		<?php endforeach ?>
