Poprawienie odnośnika more na stronie archiwum

--- a/application/views/scripts/archive/index.phtml
+++ b/application/views/scripts/archive/index.phtml
@@ -22,7 +22,7 @@
 		    
 		    <div id="main_content_news_go">
 		    	<div id="main_content_go">...</div>
-		    	<a href="<?php echo $this->url(array('controller'=>'archive', 'action'=>'details', 'id'=>$entry->getId(), 'lang'=>$_SESSION['lang']), null, true);?>"><div id="main_content_rectangle_go"></div></a>
+		    	<a class="main_content_rectangle_go" href="<?php echo $this->url(array('controller'=>'archive', 'action'=>'details', 'id'=>$entry->getId(), 'lang'=>$_SESSION['lang']), null, true);?>"> </a>
 		    </div>
     	</td>
     	<?php endforeach; ?>
