Zmiany w bazie - zmiana widokow

--- a/application/modules/admin/layouts/scripts/layout_admin.phtml
+++ b/application/modules/admin/layouts/scripts/layout_admin.phtml
@@ -28,6 +28,9 @@
 						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'auth', 'action'=>'logout'), null, true); ?>">Wyloguj</a>
 					</li>
 					<li>
+						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'event', 'action'=>'add', 'lang'=>'pl'), null, true); ?>">DODAJ NOWY EVENT</a>
+					</li>
+					<li>
 						<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'event', 'action'=>'index', 'lang'=>'pl', 'where'=>'news'), null, true); ?>">Strona NEWS</a>
 					</li>
 					<li>
@@ -58,11 +61,13 @@
 				<div id="image356">
 					<div id="image56">
 						<div id="menu_top">
+							<!-- 
 							<ul class="menu_poziome">
 								<li class="menu_poziome">
 									<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'event', 'action'=>'add', 'lang'=>'pl'), null, true); ?>">DODAJ NOWY EVENT</a>
 								</li>
 							</ul>
+							 -->
 						</div>
 						
 					</div>
