Zmiany w wygladzie panelu adm

--- a/application/modules/admin/layouts/scripts/layout-login.phtml
+++ b/application/modules/admin/layouts/scripts/layout-login.phtml
@@ -17,13 +17,16 @@
         
 	<div id="container">
 		<div id="left">
+			<div id="buffet_image"></div>
 			<div id="image8"></div>
 		</div>
 		
 		<div id="right">
+			<!-- 
 			<div id="image2356">
 				<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'index', 'action'=>'index', 'lang'=>'pl'), null, true); ?>"><div id="image2"></div></a>
 			</div>
+			 -->
 			<div id="main">
 				<?php echo $this->layout()->content ?>
 			</div>
