--- a/application/modules/admin/layouts/scripts/layout_admin.phtml
+++ b/application/modules/admin/layouts/scripts/layout_admin.phtml
@@ -21,6 +21,7 @@
     
 	<div id="container">
 		<div id="left">
+			<div id="buffet_image"></div>
 			<div id="image8"></div>
 			<div id="menu_left_admin">
 				<ul>
@@ -56,23 +57,25 @@
 		</div>
 		
 		<div id="right">
+			<!-- 
 			<div id="image2356">
-				<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'index', 'action'=>'index', 'lang'=>'pl'), null, true); ?>"><div id="image2"></div></a>
+				<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'index', 'action'=>'index', 'lang'=>'pl'), null, true); ?>"><div id="image2"></div></a> 
 				<div id="image356">
 					<div id="image56">
 						<div id="menu_top">
-							<!-- 
+							
 							<ul class="menu_poziome">
 								<li class="menu_poziome">
 									<a href="<?php echo $this->url(array('module' => 'admin', 'controller'=>'event', 'action'=>'add', 'lang'=>'pl'), null, true); ?>">DODAJ NOWY EVENT</a>
 								</li>
 							</ul>
-							 -->
+							
 						</div>
 						
 					</div>
 				</div>
 			</div>
+			-->
 			<div id="main">
 				<?php echo $this->layout()->content ?>
 			</div>
